Back up tercera entrega (sin pila)/y.output
Gramática

    0 $accept: S $end

    1 $@1: /* vacío */

    2 S: $@1 prog

    3 prog: sent
    4     | prog sent

    5 sent: read
    6     | write
    7     | asig

    8 read: READ ID

    9 asig: ID ASIGNA posicion

   10 posicion: POSICION PARA ID PYC CA lista CC PARC
   11         | POSICION PARA ID PYC CA CC PARC

   12 lista: CTE
   13      | lista COMA CTE

   14 write: WRITE CTE_S
   15      | WRITE ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
CTE (258) 12 13
ID (259) 8 9 10 11 15
CTE_S (260) 14
ASIGNA (261) 9
PARA (262) 10 11
PARC (263) 10 11
CA (264) 10 11
CC (265) 10 11
COMA (266) 13
PYC (267) 10 11
WRITE (268) 14 15
READ (269) 8
POSICION (270) 10 11


No terminales con las reglas donde aparecen

$accept (16)
    en la izquierda: 0
S (17)
    en la izquierda: 2, en la derecha: 0
$@1 (18)
    en la izquierda: 1, en la derecha: 2
prog (19)
    en la izquierda: 3 4, en la derecha: 2 4
sent (20)
    en la izquierda: 5 6 7, en la derecha: 3 4
read (21)
    en la izquierda: 8, en la derecha: 5
asig (22)
    en la izquierda: 9, en la derecha: 7
posicion (23)
    en la izquierda: 10 11, en la derecha: 9
lista (24)
    en la izquierda: 12 13, en la derecha: 10 13
write (25)
    en la izquierda: 14 15, en la derecha: 6


estado 0

    0 $accept: . S $end

    $default  reduce usando la regla 1 ($@1)

    S    ir al estado 1
    $@1  ir al estado 2


estado 1

    0 $accept: S . $end

    $end  desplazar e ir al estado 3


estado 2

    2 S: $@1 . prog

    ID     desplazar e ir al estado 4
    WRITE  desplazar e ir al estado 5
    READ   desplazar e ir al estado 6

    prog   ir al estado 7
    sent   ir al estado 8
    read   ir al estado 9
    asig   ir al estado 10
    write  ir al estado 11


estado 3

    0 $accept: S $end .

    $default  aceptar


estado 4

    9 asig: ID . ASIGNA posicion

    ASIGNA  desplazar e ir al estado 12


estado 5

   14 write: WRITE . CTE_S
   15      | WRITE . ID

    ID     desplazar e ir al estado 13
    CTE_S  desplazar e ir al estado 14


estado 6

    8 read: READ . ID

    ID  desplazar e ir al estado 15


estado 7

    2 S: $@1 prog .
    4 prog: prog . sent

    ID     desplazar e ir al estado 4
    WRITE  desplazar e ir al estado 5
    READ   desplazar e ir al estado 6

    $default  reduce usando la regla 2 (S)

    sent   ir al estado 16
    read   ir al estado 9
    asig   ir al estado 10
    write  ir al estado 11


estado 8

    3 prog: sent .

    $default  reduce usando la regla 3 (prog)


estado 9

    5 sent: read .

    $default  reduce usando la regla 5 (sent)


estado 10

    7 sent: asig .

    $default  reduce usando la regla 7 (sent)


estado 11

    6 sent: write .

    $default  reduce usando la regla 6 (sent)


estado 12

    9 asig: ID ASIGNA . posicion

    POSICION  desplazar e ir al estado 17

    posicion  ir al estado 18


estado 13

   15 write: WRITE ID .

    $default  reduce usando la regla 15 (write)


estado 14

   14 write: WRITE CTE_S .

    $default  reduce usando la regla 14 (write)


estado 15

    8 read: READ ID .

    $default  reduce usando la regla 8 (read)


estado 16

    4 prog: prog sent .

    $default  reduce usando la regla 4 (prog)


estado 17

   10 posicion: POSICION . PARA ID PYC CA lista CC PARC
   11         | POSICION . PARA ID PYC CA CC PARC

    PARA  desplazar e ir al estado 19


estado 18

    9 asig: ID ASIGNA posicion .

    $default  reduce usando la regla 9 (asig)


estado 19

   10 posicion: POSICION PARA . ID PYC CA lista CC PARC
   11         | POSICION PARA . ID PYC CA CC PARC

    ID  desplazar e ir al estado 20


estado 20

   10 posicion: POSICION PARA ID . PYC CA lista CC PARC
   11         | POSICION PARA ID . PYC CA CC PARC

    PYC  desplazar e ir al estado 21


estado 21

   10 posicion: POSICION PARA ID PYC . CA lista CC PARC
   11         | POSICION PARA ID PYC . CA CC PARC

    CA  desplazar e ir al estado 22


estado 22

   10 posicion: POSICION PARA ID PYC CA . lista CC PARC
   11         | POSICION PARA ID PYC CA . CC PARC

    CTE  desplazar e ir al estado 23
    CC   desplazar e ir al estado 24

    lista  ir al estado 25


estado 23

   12 lista: CTE .

    $default  reduce usando la regla 12 (lista)


estado 24

   11 posicion: POSICION PARA ID PYC CA CC . PARC

    PARC  desplazar e ir al estado 26


estado 25

   10 posicion: POSICION PARA ID PYC CA lista . CC PARC
   13 lista: lista . COMA CTE

    CC    desplazar e ir al estado 27
    COMA  desplazar e ir al estado 28


estado 26

   11 posicion: POSICION PARA ID PYC CA CC PARC .

    $default  reduce usando la regla 11 (posicion)


estado 27

   10 posicion: POSICION PARA ID PYC CA lista CC . PARC

    PARC  desplazar e ir al estado 29


estado 28

   13 lista: lista COMA . CTE

    CTE  desplazar e ir al estado 30


estado 29

   10 posicion: POSICION PARA ID PYC CA lista CC PARC .

    $default  reduce usando la regla 10 (posicion)


estado 30

   13 lista: lista COMA CTE .

    $default  reduce usando la regla 13 (lista)
